# python-wordle

./: README.md  pyproject.toml
wordle/: create_wordlist.py  wordle.py
